<resources>
    <string name="app_name">桌牌</string>
    <string name="title_home">会议</string>
    <string name="title_dashboard">模板</string>
    <string name="title_notifications">个人中心</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">PassWord</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="chage_passwd"> 修改密码</string>
    <string name="about"> 关于</string>
    <string name="version_update"> 版本更新</string>
    <string name="lagout"> 退出登录</string>
    <string name="clean_cache"> 清除缓存</string>
    <string name="make_sure_options">请确认操作</string>

    <string name="user_name">ADMIN</string>
    <string name="passwd">admin</string>

</resources>
