<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nav_view">
    </ListView>

    <LinearLayout xmlns:zsg="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ucenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_blur"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_blur"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_line"
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/user_line"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/chagepasswd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:text="@string/chage_passwd"
                android:textSize="17sp"
                android:gravity="fill_vertical"
                android:onClick="TextViewOnClick"/>

            <TextView
                android:id="@+id/clean_cache"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_below="@id/chagepasswd"
                android:text="@string/clean_cache"
                android:textSize="17sp"
                android:gravity="fill_vertical"
                android:onClick="TextViewOnClick"/>

            <TextView
                android:id="@+id/version_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_below="@id/clean_cache"
                android:text="@string/version_update"
                android:textSize="17sp"
                android:gravity="fill_vertical"
                android:onClick="TextViewOnClick"/>

            <TextView
                android:id="@+id/lagout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/version_update"
                android:layout_marginTop="11dp"
                android:background="@color/white"
                android:clickable="true"
                android:text="@string/lagout"
                android:textSize="17sp"
                android:gravity="fill_vertical"
                android:onClick="TextViewOnClick"/>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_below="@id/lagout"
                android:text="@string/about"
                android:textSize="17sp"
                android:gravity="fill_vertical"
                android:onClick="TextViewOnClick"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</android.support.constraint.ConstraintLayout>